--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li>🎹 业余电子音乐制作人，旋律系Bass乐狂热爱好者</li>
                 <li>✈️ 我在玩：X-Plane 12和微软模拟飞行2020</li>
                 <li>📫 想要联系我？可以发送邮件至 <span class="email">aritxonly@qq.com</span></li>
+                <li>🎗️ 通过<a href="https://afdian.net/a/aritxonly">爱发电</a>捐赠我</li>
             </ul>
         </div>
         <p class="ques">
