--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="block" id="music">
             <div class="cover">
                 <p id="divtitle">
-                    <a href="./inner-page/music.html">-音乐作品-</a>
+                    <a href="./music/music.html">-音乐作品-</a>
                 </p>
                 <p id="divcontent">
                     业余电子音乐制作人AritxOnly
@@ -63,7 +63,7 @@
         <div class="block" id="apps">
             <div class="cover">
                 <p id="divtitle">
-                    <a href="./inner-page/apps.html">-应用开发-</a>
+                    <a href="./apps/apps.html">-应用开发-</a>
                 </p>
                 <p id="divcontent">
                     较为熟练地运用Qt进行C++或Python的跨平台GUI应用的开发
@@ -84,15 +84,12 @@
         </div>
         <div class="block" id="videos">
             <p id="divtitle">
-                <a href="./inner-page/videos.html">-视频作品-</a>
+                <a href="./media/media.html">-视频作品-</a>
             </p>
             <p id="divcontent">
                 业余视频创作者，在<a href="https://space.bilibili.com/283375530">哔哩哔哩</a>上惨淡地拥有1200+粉丝
                 <br>
                 主要创作音乐内容，也进行模拟飞行的直播，同时也会有AMV、数码评测、Vlog等多元媒体内容创作产出
-                <br>
-                <br>
-
             </p>
         </div>
         <div class="block" id="learning-materials">
@@ -125,7 +122,7 @@
             </svg>
             哔哩哔哩
         </a>
-        <a>
+        <a href="https://music.163.com/#/artist?id=34279798">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-music-note-beamed" viewBox="0 0 16 16">
                 <path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2zm9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2z"/>
                 <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z"/>
@@ -133,7 +130,7 @@
             </svg>
             网易云音乐
         </a>
-        <a>
+        <a href="https://soundcloud.com/aritx-zhou">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-soundwave" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8.5 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11a.5.5 0 0 1 .5-.5zm-2 2a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zm-6 1.5A.5.5 0 0 1 5 6v4a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm8 0a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm-10 1A.5.5 0 0 1 3 7v2a.5.5 0 0 1-1 0V7a.5.5 0 0 1 .5-.5zm12 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0V7a.5.5 0 0 1 .5-.5z"/>
             </svg>
