Rearrage files, add CNAME and merged with Github

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="block" id="music">
             <div class="cover">
                 <p id="divtitle">
-                    <a href="./music/music.html">-音乐作品-</a>
+                    <a href="./music">-音乐作品-</a>
                 </p>
                 <p id="divcontent">
                     业余电子音乐制作人AritxOnly
@@ -63,7 +63,7 @@
         <div class="block" id="apps">
             <div class="cover">
                 <p id="divtitle">
-                    <a href="./apps/apps.html">-应用开发-</a>
+                    <a href="./apps">-应用开发-</a>
                 </p>
                 <p id="divcontent">
                     较为熟练地运用Qt进行C++或Python的跨平台GUI应用的开发
@@ -82,27 +82,45 @@
                 </p>
             </div>
         </div>
+        <div class="block" id="photos">
+            <div class="cover">
+                <p id="divtitle">
+                    <a href="./photos">-手机摄影-</a>
+                </p>
+                <p id="divcontent">
+                    手机摄影爱好者，手持OPPO Find X6作为主要摄影的设备
+                    <br>
+                    在酷安，本人用户名为Aritx音唯
+                    <br>
+                    点击本栏标题可以查看我的摄影作品~
+                </p>
+            </div>
+        </div>
         <div class="block" id="videos">
-            <p id="divtitle">
-                <a href="./media/media.html">-视频作品-</a>
-            </p>
-            <p id="divcontent">
-                业余视频创作者，在<a href="https://space.bilibili.com/283375530">哔哩哔哩</a>上惨淡地拥有1200+粉丝
-                <br>
-                主要创作音乐内容，也进行模拟飞行的直播，同时也会有AMV、数码评测、Vlog等多元媒体内容创作产出
-            </p>
+            <div class="cover">
+                <p id="divtitle">
+                    <a href="./media">-视频创作-</a>
+                </p>
+                <p id="divcontent">
+                    业余视频创作者，在<a href="https://space.bilibili.com/283375530">哔哩哔哩</a>上惨淡地拥有1200+粉丝
+                    <br>
+                    主要创作音乐内容，也进行模拟飞行的直播，同时也会有AMV、数码评测、Vlog等多元媒体内容创作产出
+                </p>
+            </div>
         </div>
         <div class="block" id="learning-materials">
-            <p id="divtitle">
-                <a href="./inner-page/learning.html">
-                    -学术成果-
-                </a>
-            </p>
-            <p id="divcontent">
-                这部分实在编不出来了，本人是大二学生
-                <br>
-                能有什么学术成果？😅
-            </p>
+            <div class="cover">
+                <p id="divtitle">
+                    <a href="./learning">
+                        -学术成果-
+                    </a>
+                </p>
+                <p id="divcontent">
+                    这部分实在编不出来了，本人是大二学生
+                    <br>
+                    能有什么学术成果？😅
+                </p>
+            </div>
         </div>
     </div>
     <!--底栏-->
