--- a/media/index.html
+++ b/media/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小站详情页施工中～</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="shortcut icon" href="../res/bio.png" type="image/x-icon">
 </head>
 <body>
     <!--顶栏-->
