Compressed some images for faster loading

--- a/apps/index.html
+++ b/apps/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>音唯的应用开发项目</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="shortcut icon" href="../res/bio.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../res/bio.jpg" type="image/x-icon">
 </head>
 <body>
     <!--顶栏-->
