Build music page & add links ref by pressing Momoi

--- a/apps/index.html
+++ b/apps/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>音唯的应用开发项目</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="shortcut icon" href="../res/bio.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../res/bio.png" type="image/x-icon">
 </head>
 <body>
     <!--顶栏-->
     <div class="banner">
-        <img src="../res/bio.png" alt="Bio" width="60px" height="60px">
+        <a href="../"><img src="../res/bio.png" alt="Bio" width="60px" height="60px"></a>
         <h1 id="pagetitle">Aritx音唯的个人小站</p>
     </div>
     <!--内容栏-->
