--- a/music/index.html
+++ b/music/index.html
@@ -3,20 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小站详情页施工中～</title>
+    <title>音唯的音乐作品</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="shortcut icon" href="../res/bio.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../res/bio.png" type="image/x-icon">
 </head>
 <body>
     <!--顶栏-->
-    <div class="banner">
-        <img src="../res/bio.png" alt="Bio" width="60px" height="60px">
+    <div class="banner" id="music-banner">
+        <a href="../"><img src="../res/bio.png" alt="Bio" width="60px" height="60px"></a>
         <h1 id="pagetitle">Aritx音唯的个人小站</p>
     </div>
     <!--内容栏-->
     <div class="content">
-        <p class="working">小站详情页施工中！</p>
+        <div>
+            <div id="diary-background" class="cover-background"></div>
+            <div id="diary-trailer">
+                <p class="title">
+                    New A<span>l</span>bu<span>m:</span> diary.
+                </p>
+                <p>
+                    Release on:<br>
+                    MjA<span>yNS80Lz</span>IyCkNvbWluZyBTb29u
+                </p>
+            </div>
+        </div>
+        <p class="music-title">即将发行</p>
+        <div class="music-cover">
+            <img src="../res/music/behind-the-clouds.png" alt="Behind The Clouds">
+            <p>
+                <b>Behind The Clouds /w Cris.Q</b><br>
+                2024/8/29<br>
+                发行厂牌Vultures Records
+            </p>
+        </div>
+        <p class="music-title">最近发行</p>
+        <div class="music-cover">
+            <a href="https://music.163.com/#/song?id=2615123974">
+                <img src="../res/music/supernova.JPG" alt="Supernova">
+            </a>
+            <a href="https://music.163.com/#/song?id=2165278008">
+                <img src="../res/music/togetoge-remix.jpg" alt="空之箱(Aritx&Era Remix)">
+            </a>
+            <a href="https://music.163.com/#/song?id=2146228501">
+                <img src="../res/music/nineteenth.jpg" alt="nineteenth">
+            </a>
+            <a href="https://music.163.com/#/song?id=2131710142">
+                <img src="../res/music/antonno-remix.jpg" alt="那从前(AritxOnly Remix)">
+            </a>
+            <a href="https://music.163.com/#/song?id=2123827943">
+                <img src="../res/music/relieving.jpg" alt="Relieving">
+            </a>
+            <a href="https://music.163.com/#/song?id=2120428515">
+                <img src="../res/music/pure-emotions.jpg" alt="Pure Emotions">
+            </a>
+        </div>
     </div>
+    <!-- 播放组件 -->
+    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=0&id=12474430967&auto=1&height=32"></iframe>
     <!--底栏-->
     <div class="bottom">
         <p id="more_about">更多关于我的信息？</p>
