Add individual css for music

--- a/music/index.html
+++ b/music/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>音唯的音乐作品</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="../res/bio.png" type="image/x-icon">
 </head>
 <body>
