--- a/music/index.html
+++ b/music/index.html
@@ -39,6 +39,9 @@
         </div>
         <p class="music-title">最近发行</p>
         <div class="music-cover">
+            <a href="https://music.163.com/#/song?id=2619141473">
+                <img src="../res/music/hello-world.jpg" alt="HELLØ WORLD">
+            </a>
             <a href="https://music.163.com/#/song?id=2615123974">
                 <img src="../res/music/supernova.JPG" alt="Supernova">
             </a>
@@ -54,9 +57,9 @@
             <a href="https://music.163.com/#/song?id=2123827943">
                 <img src="../res/music/relieving.jpg" alt="Relieving">
             </a>
-            <a href="https://music.163.com/#/song?id=2120428515">
+            <!-- <a href="https://music.163.com/#/song?id=2120428515">
                 <img src="../res/music/pure-emotions.jpg" alt="Pure Emotions">
-            </a>
+            </a> -->
         </div>
     </div>
     <!-- 播放组件 -->
