--- a/music/index.html
+++ b/music/index.html
@@ -30,15 +30,21 @@
         </div>
         <p class="music-title">即将发行</p>
         <div class="music-cover">
-            <img src="../res/music/behind-the-clouds.png" alt="Behind The Clouds">
+            <p>
+                -- 暂无 --
+            </p>
+            <!-- <img src="../res/music/behind-the-clouds.png" alt="Behind The Clouds">
             <p>
                 <b>Behind The Clouds /w Cris.Q</b><br>
                 2024/8/29<br>
                 发行厂牌Vultures Records
-            </p>
+            </p> -->
         </div>
         <p class="music-title">最近发行</p>
         <div class="music-cover">
+            <a href="https://music.163.com/#/song?id=2621370938">
+                <img src="../res//music/behind-the-clouds.png" alt="">
+            </a>
             <a href="https://music.163.com/#/song?id=2619141473">
                 <img src="../res/music/hello-world.jpg" alt="HELLØ WORLD">
             </a>
@@ -57,9 +63,9 @@
             <a href="https://music.163.com/#/song?id=2123827943">
                 <img src="../res/music/relieving.jpg" alt="Relieving">
             </a>
-            <!-- <a href="https://music.163.com/#/song?id=2120428515">
+            <a href="https://music.163.com/#/song?id=2120428515">
                 <img src="../res/music/pure-emotions.jpg" alt="Pure Emotions">
-            </a> -->
+            </a>
         </div>
     </div>
     <!-- 播放组件 -->
