--- a/music/index.html
+++ b/music/index.html
@@ -15,7 +15,7 @@
     </div>
     <!--内容栏-->
     <div class="content">
-        <p class="working">小站详情页施工中！</p>
+        <p class="working">详情页施工中</p>
     </div>
     <!--底栏-->
     <div class="bottom">
