Update music files

--- a/music/index.html
+++ b/music/index.html
@@ -42,8 +42,11 @@
         </div>
         <p class="music-title">最近发行</p>
         <div class="music-cover">
+            <a href="https://music.163.com/#/song?id=2633854476">
+                <img src="../res/music/april-blossom.jpg" alt="肆月花开">
+            </a>
             <a href="https://music.163.com/#/song?id=2621370938">
-                <img src="../res//music/behind-the-clouds.png" alt="">
+                <img src="../res/music/behind-the-clouds.png" alt="Behind The Clouds">
             </a>
             <a href="https://music.163.com/#/song?id=2619141473">
                 <img src="../res/music/hello-world.jpg" alt="HELLØ WORLD">
