--- a/music/index.html
+++ b/music/index.html
@@ -12,7 +12,7 @@
     <!--顶栏-->
     <div class="banner" id="music-banner">
         <a href="../"><img src="../res/bio.png" alt="Bio" width="60px" height="60px"></a>
-        <h1 id="pagetitle">Aritx音唯的个人小站</p>
+        <p id="pagetitle">Aritx音唯的个人小站</p>
     </div>
     <!--内容栏-->
     <div class="content">
