--- a/apps/index.html
+++ b/apps/index.html
@@ -70,10 +70,35 @@
                 <img src="../res/apps/gunship-vpet.jpg" class="preview">
             </div>
         </div>
-        <div class="apps-block"></div>
+        <div class="apps-block">
+            <p id="title">Deadliner</p>
+            <div id="content">
+                <img src="../res/apps/deadliner.png" class="preview" style="width: 30%;">
+                <div class="details">
+                    <a href="https://github.com/AritxOnly/Deadliner" class="detail-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                        </svg>
+                    </a>
+                    <span class="space"></span>
+                    <a href="https://github.com/AritxOnly/Deadliner/releases" class="detail-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                            <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+                            <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+                        </svg>
+                    </a><br>
+                    <p>
+                        一个给女朋友做的Deadline管理app<br>
+                        原生Kotlin、动态取色<br>
+                        还有更多功能等你来体验...
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="apps-block"></div>
         <div class="apps-block"></div>
     </div>
+    
     <!--底栏-->
     <div class="bottom">
         <p id="more_about">更多关于我的信息？</p>
